code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note3

21-Apr-2013 Mark Dexter
 # Fix incorrect commit for [#30617] *Tags: Discover sql not in sync. Thanks Thomas Hunziker.

21-Apr-2013 Jean-Marie Simonet
 # [#30645] *Hathor: Icomoon icons don't show in multiple places

-------------------- 3.1 Beta 5 Release [20-Apr-2012] ------------------

20-Apr-2013 Mark Dexter
 # [#30323] tag created iso selected with ajax interface when using keyboard only selection. Thanks Roberto Segura.
 # [#30432] Optimize styling for small devices. Thanks Nick Savov.
 # [#30533] 'banner position missing in Protostar templateDetails.xml file. Thanks Kevin Griffiths.
 # [#30555] JTableContenttype->save() breaks type_alias. Thanks Thomas Hunziker.
 # [#30592] Module Class Suffix	 should be a multiline text area. Thanks Ben Tasker.
 # [#30595] Fixing "urls" within TagsTableTag->bind(). Thanks Thomas Hunziker.
 # [#30596] Access Level in weblinnks manager is displaying as number. Thanks Elin Waring.
 # [#30599] Backward Compatibilty break in JHtmlBootstrap::addPanel and ::startPane. Thanks Yannick Gaultier. 
 # [#30617] *Tags: Discover sql not in sync. Thanks Thomas Hunziker.
 # [#30621] Fix batch issues, metadata issues and improve code quality. Thanks Elin Waring and Mark Dexter.

17-Apr-2013 Mark Dexter
 # [#30458] Tags: Fatal Error with 3rd Party Component That Uses Categories. Thanks Patrick Alt.
 # [#30588] Fixing Tag view if core_access is not set. Thanks Thomas Hunziker.

16-Apr-2013 Mark Dexter
 # [#30584] JUcmContent can't construct from alias / error in install SQL. Thanks Thomas Hunziker.

15-Apr-2013 Mark Dexter
 + [#30298] Added note form field. Thanks Peter van Westen.
 # [#30583] Deprecate SimplePie. Thanks Elin Waring.
 # [#29678] null value in column "data" (postgresql). Thanks Michael Babker.

15-Apr-2013 Jean-Marie Simonet